--- a/BoatLux/BoatLux.Presentation/ClientApp/src/app/modules/financeiro/cadastros/custos/cadastro-custos-dialog/cadastro-custos-dialog.component.html
+++ b/BoatLux/BoatLux.Presentation/ClientApp/src/app/modules/financeiro/cadastros/custos/cadastro-custos-dialog/cadastro-custos-dialog.component.html
@@ -24,5 +24,5 @@
 </mat-dialog-content>
 <mat-dialog-actions align="end">
     <button mat-button (click)="closeWindow(false)">Fechar</button>
-    <button mat-raised-button color="accent" class="deep-purple-300-bg" [mat-dialog-close]="data" (click)="addCost();">Adicionar custo</button>
+    <button mat-raised-button color="accent" class="deep-purple-300-bg" (click)="addCost();">Adicionar custo</button>
 </mat-dialog-actions>
